--- a/rocket-league/style.css
+++ b/rocket-league/style.css
@@ -43,8 +43,7 @@ body {
 }
 
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
+    padding-inline: 14%;
 }
 
 .hero {
@@ -77,7 +76,7 @@ body {
     font-size: 1rem;
     color: #3C93AF;
     margin-bottom: 2rem;
-    margin-right: 4rem;
+    width: 30rem;
     line-height: 1.6;
 }
 
