--- a/historia-programacao/style.css
+++ b/historia-programacao/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Hanken Grotesk', sans-serif;
 }
 
 body {
@@ -47,7 +47,6 @@ nav ul li a:hover {
 }
 
 .hero {
-    padding: 5rem 0;
     min-height: 70vh;
     display: flex;
     align-items: center;
@@ -138,9 +137,9 @@ p {
 .timeline::before {
     content: "";
     position: absolute;
-    left: 3.25rem;
-    top: 0;
-    bottom: 0;
+    left: 15.6%;
+    top: 12%;
+    bottom: 6%;
     width: 4px;
     background: linear-gradient(180deg, #3C93AF 0%, #24384B 100%);
     border-radius: 4px;
@@ -152,7 +151,41 @@ p {
     display: flex;
     gap: 1.25rem;
     margin-bottom: 2rem;
-    align-items: flex-start;
+    align-items: center;
+}
+
+.timeline-image img{
+    width: 100px;
+    height: auto;
+    padding: 10%;
+    border-radius: 8px; 
+    object-fit: contain; 
+}
+
+.timeline-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0.5rem;
+}
+.timeline {
+    position: relative;
+}
+
+.timeline-marker {
+    flex: 0 0 3rem;
+    height: 3rem;
+    background: #3C93AF;
+    margin-top: 3rem;
+    color: #ECEDE0;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    box-shadow: 0 6px 18px rgba(36,56,75,0.12);
+    transform: translateX(0.25rem);
+    z-index: 2;
 }
 
 .timeline-content {
