tela inicial que redireciona para os jogos

--- a/clash-royale/style.css
+++ b/clash-royale/style.css
@@ -52,33 +52,55 @@ nav ul li {
 nav ul li a {
     color: #24384B;
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: 1rem;
     transition: all 0.3s ease;
 }
 
 nav ul li a:hover {
     color: #3C93AF;
+    font-weight: bold;
 }
 
 body {
     background-color: #ECEDE0;
     line-height: 1.6;
+    padding-top: 12vh;
 }
 
 section{
     display: flex;
     flex-direction: column;
 }
+
 .container {
     padding-inline: 14%;
+}
+
+.hero {
+    height: 88vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4rem;
+    align-items: center;
+    width: 100%;
+}
+
+.technologies-container {
+    text-align: center;
+    background: #F5F5F0;
+    padding: 5rem 0;
 }
 
 .technologies {
     display: flex;
     justify-content: center;
     gap: 2rem;
-    margin-top: 2rem;
-    padding: 0 2rem;
 }
 
 .tech-card {
@@ -112,21 +134,6 @@ section{
     color: #666;
     font-size: 0.9rem;
     line-height: 1.5;
-}
-
-.hero {
-    margin-top: 60px;
-    padding: 5rem 0;
-    min-height: 70vh;
-    display: flex;
-    align-items: center;
-}
-
-.hero-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 4rem;
-    align-items: center;
 }
 
 .hero-text h1 {
@@ -177,11 +184,10 @@ section{
 }
 
 .subtitle{
-    margin-top: 80px;
     font-size: 30px;
     font-weight: 700;
     color: #24384B;
-    margin-bottom: 1.5rem;
+    margin-bottom: 3rem;
     line-height: 1.2;
 }
 .hero-image {
@@ -194,7 +200,7 @@ section{
 .hero-image img {
     width: 100%;
     max-width: 600px;
-    height: auto;
+    height: 350px;
     border-radius: 12px;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
 }
