--- a/historia-programacao/style.css
+++ b/historia-programacao/style.css
@@ -58,12 +58,13 @@ nav ul li {
 nav ul li a {
     color: #24384B;
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: 1rem;
     transition: all 0.3s ease;
 }
 
 nav ul li a:hover {
     color: #3C93AF;
+    font-weight: bold;
 }
 
 .container {
