Correção das navbars e atualização de card fortine

--- a/cs2/style.css
+++ b/cs2/style.css
@@ -33,6 +33,11 @@ header {
     padding: 0 14%;
 }
 
+.logo {
+    display: flex;
+    align-items: center;
+}
+
 .logo img {
     height: 56px;
     width: auto;
@@ -42,14 +47,19 @@ header {
 nav ul {
     list-style: none;
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 3rem;
+}
+
+nav ul li {
+    display: inline;
 }
 
 nav ul li a {
     color: #24384B;
     text-decoration: none;
-    font-size: 1rem;
-    padding: 0.5rem 1rem;
+    font-size: 0.9rem;
     transition: all 0.3s ease;
 }
 
