--- a/cs2/style.css
+++ b/cs2/style.css
@@ -77,10 +77,10 @@ section {
 }
 
 .hero {
-    padding: 5rem 0;
-    min-height: 70vh;
+    min-height: 88vh;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .hero-content {
