adição do footer nos styles

--- a/rocket-league/style.css
+++ b/rocket-league/style.css
@@ -363,3 +363,11 @@ body {
     color: #5A5A5A;
     line-height: 1.6;
 }
+
+footer {
+  text-align: center;
+  padding: 25px;
+  background-color: #1a2938;
+  color: #c4c4c4;
+  font-size: 0.9rem;
+}
