--- a/fortnite/style.css
+++ b/fortnite/style.css
@@ -449,3 +449,11 @@ section{
     margin: 0 auto;
     line-height: 1.6;
 }
+
+footer {
+  text-align: center;
+  padding: 25px;
+  background-color: #1a2938;
+  color: #c4c4c4;
+  font-size: 0.9rem;
+}
