--- a/historia-programacao/style.css
+++ b/historia-programacao/style.css
@@ -260,6 +260,14 @@ p {
     border-radius: 8px;
 }
 
+footer {
+  text-align: center;
+  padding: 25px;
+  background-color: #1a2938;
+  color: #c4c4c4;
+  font-size: 0.9rem;
+}
+
 @media (max-width: 860px) {
   .image-right,
   .image-left,
